Configure Elastic Beanstalk to use launch templates

--- a/ecommerce_api/.ebextensions/django.config
+++ b/ecommerce_api/.ebextensions/django.config
@@ -1,3 +1,24 @@
 option_settings:
   aws:elasticbeanstalk:container:python:
     WSGIPath: ecommerce_api/wsgi.py
+
+Resources:
+  AWSEBAutoScalingGroup:
+    Type: AWS::AutoScaling::AutoScalingGroup
+    Properties:
+      LaunchTemplate:
+        LaunchTemplateName: !Ref AWSEBAutoScalingLaunchTemplate
+        Version: !GetAtt AWSEBAutoScalingLaunchTemplate.LatestVersionNumber
+  AWSEBAutoScalingLaunchTemplate:
+    Type: AWS::EC2::LaunchTemplate
+    Properties:
+      LaunchTemplateName: !Sub "${AWS::StackName}-LaunchTemplate"
+      LaunchTemplateData:
+        InstanceType: !Ref InstanceType
+        KeyName: !Ref KeyName
+        SecurityGroupIds:
+          - !Ref AWSEBSecurityGroup
+        UserData:
+          Fn::Base64: !Sub |
+            #!/bin/bash
+            # Add your instance setup scripts here
